# haskellbook

./: answers.txt  ch12.hs
ch1/: ch1.txt
ch10/: exercises.hs  fibs.hs  midExercises.hs
ch11/: binaryTree.hs  chexercises.hs  exercises.hs  goats.hs  goatsnewtype.hs
ch12/: chexercises.hs  exercises.hs
ch13/: exercises.hs
ch13/hangman/: hangman.cabal
ch13/hangman/.stack-work/install/x86_64-osx/lts-7.18/8.0.1/flag-cache/: hangman-0.1.0.0-CcXPL4z5XJ16AKbxhRZoP9  random-1.1-54KmMHXjttlERYcr1mvsAe  split-0.2.3.1-IJKK4pOCYGKud0jZImZke
ch13/hangman/.stack-work/install/x86_64-osx/lts-7.18/8.0.1/lib/x86_64-osx-ghc-8.0.1/hangman-0.1.0.0-CcXPL4z5XJ16AKbxhRZoP9/: Game.dyn_hi  Puzzle.dyn_hi  PuzzleType.dyn_hi  PuzzleType.hi
ch13/hangman/.stack-work/install/x86_64-osx/lts-7.18/8.0.1/pkgdb/: hangman-0.1.0.0-CcXPL4z5XJ16AKbxhRZoP9.conf  package.cache
ch13/hangman/app/: Main.hs
ch13/hangman/src/: Game.hs  PuzzleType.hs  WordPicker.hs
ch14/addition/: Addition.hs  (+1 more)
ch15/: exercises.hs
ch16/: chexercises.hs  exercises.hs
ch17/: chexercises.hs
ch18/: chexercises.hs  exercises.hs
ch2/: exercises.txt  waxOn.hs
ch20/: exercises.hs
ch21/: exercises.hs  httpstuff.hs
ch22/: bip.hs  warmingUp.hs
ch24/: fractions.hs  parse.hs
ch3/: TopOrLocal.hs  exercises.hs  print2.hs  print3.hs  print3Flipped.hs  reverse.hs
ch4/: exercises.hs
ch5/: exercises.hs  fixit.hs  typeInference1.hs
ch6/: dayOfWeek.hs  exercises.md  showPlay.hs
ch7/: chapterEx.hs  dodgy.hs  exercises.md
ch8/: exercises.hs  wordNumber.hs
ch9/: cipher.hs  exercises.hs  midexercises.hs
(+6 files in other folders)
