name:                hangman
version:             0.1.0.0
synopsis:            Playing hangman
license:             BSD3
license-file:        LICENSE
author:              Ernie Turner
maintainer:          ernie.turner@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hangman

library
  hs-source-dirs:      src
  exposed-modules:     WordPicker, Game, PuzzleType
  build-depends:       base >= 4.7 && < 5, random
  default-language:    Haskell2010